@@ -5,6 +5,7 @@
     WATO:
     * 0249 FIX: Backup & Restore: fixed bug when uploading legacy snapshots...
     * 0250 FIX: Fixed error on creating very large WATO snapshots...
+    * 0422 FIX: Fixed numbers shown in log entries of bulk inventory...
 
 
 1.2.4b2:
